# TASK-20260318-B1E818

./: meta-data.json
.tmp/: static_audit_report_v2.md  static_audit_report_v3.md
docs/: api-spec.md  design.md  questions.md
repo/: .env.example  Dockerfile  README.md  docker-compose.yml  offline_platform.db  pyproject.toml  run_tests.sh
repo/.tmp/: static_audit_report.md
repo/alembic/versions/: 0001_init_audit_trigger.sql  0002_operational_domains.sql  0003_aftersales_idempotency_scope.sql
repo/app/: main.py
repo/app/api/v1/: routes.py
repo/app/domain/: events.py  printer.py  services.py
repo/app/infra/: auth.py  config.py  db.py  encryption.py  response.py  security.py  ws.py
repo/app/models/: entities.py
repo/offline_platform_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
repo/scripts/: seed_admin.py
repo/tests/: test_workflow.py
